--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ mkdir docs</pre></div>
 <li>Run the Gitbook Server </li>
 </ul>
 
-<p><img src="https://github.com/copriwolf/Docker2Gitbook/raw/master/help/flow.png" alt=""></p>
+<p><img src="help/flow.png" alt=""></p>
 
 <hr>
 
@@ -128,7 +128,7 @@ mkdir docs</pre></div>
 <li>通过运行Docker服务来运行Gitbook服务。</li>
 </ul>
 
-<p><img src="https://github.com/copriwolf/Docker2Gitbook/raw/master/help/flow.png" alt=""></p>
+<p><img src="help/flow.png" alt=""></p>
 
 <h2>
 <a id="注意事项" class="anchor" href="#%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A1%B9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>注意事项</h2>
@@ -147,6 +147,22 @@ mkdir docs</pre></div>
 </ul>
 
 <div class="highlight highlight-source-shell"><pre>docker run -d -p 5500:4000 docker2gitbook</pre></div>
+
+<ul>
+<li>在国内加载npm源的速度太慢了，有没有办法加速？
+使用国内的淘宝镜像npm源来替代，能有显著的速度提升，请在执行<code>使用方法</code>前在，本地的项目<code>根目录</code>运行以下命令。</li>
+</ul>
+
+<pre><code>mv dockerfile-zh dockerfile
+</code></pre>
+
+<ul>
+<li>主机的内存配置不够，在gitbook install这一步等待时间长，最后显示<code>KILLED</code>，然后安装失败，如何解决？
+分布安装gitbook插件可以解决这个情况。请在执行<code>使用方法</code>前在，本地的项目<code>根目录</code>运行以下命令。</li>
+</ul>
+
+<pre><code>mv dockerfile-zh dockerfile
+</code></pre>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/copriwolf/Docker2Gitbook">Docker2Gitbook</a> is maintained by <a href="https://github.com/copriwolf">copriwolf</a>.</span>
