Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ mkdir docs</pre></div>
 <li>Run the Gitbook Server </li>
 </ul>
 
-<p><img src="help/flow.png" alt=""></p>
+<p><img src="https://github.com/copriwolf/Docker2Gitbook/raw/master/help/flow.png" alt=""></p>
 
 <hr>
 
@@ -128,7 +128,7 @@ mkdir docs</pre></div>
 <li>通过运行Docker服务来运行Gitbook服务。</li>
 </ul>
 
-<p><img src="help/flow.png" alt=""></p>
+<p><img src="https://github.com/copriwolf/Docker2Gitbook/raw/master/help/flow.png" alt=""></p>
 
 <h2>
 <a id="注意事项" class="anchor" href="#%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A1%B9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>注意事项</h2>
